--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
     "pg": "^8.11.0",
     "typeorm": "^0.3.17",
     "reflect-metadata": "^0.2.2",
