--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
+    "axios": "^1.4.0",
     "pg": "^8.11.0",
     "typeorm": "^0.3.17",
     "reflect-metadata": "^0.2.2",
