--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.4.0",
+    "googleapis": "^171.4.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
-    "axios": "^1.4.0",
     "pg": "^8.11.0",
-    "typeorm": "^0.3.17",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
